# MoA

./: .env  .gitignore  BRANDING.md  CONTRIBUTING.md  LICENSE  README.md  app.py  bot.py  check_branding.py  config.py  env.example  pyproject.toml  requirements.txt  run.bat  run.ps1  test_installation.py  update.bat  update.ps1  update.py  update_checker.py  utils.py  view_logs.bat  view_logs.ps1
.github/workflows/: python-package-conda.yml
static/: script.js  style.css
templates/: chat.html  index.html
